update retry policy